--- a/app/src/main/res/layout/activity_edit_user_ifo.xml
+++ b/app/src/main/res/layout/activity_edit_user_ifo.xml
@@ -1,11 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.example.aoge.skillexchange.EditUserIfoActivity">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
     <ImageButton
         android:id="@+id/imb_edit_back"
         android:layout_width="50dp"
@@ -28,11 +33,27 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.039" />
 
+    <TextView
+        android:id="@+id/txt_e_welcome"
+        android:layout_width="wrap_content"
+        android:layout_height="80dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_gravity="center_horizontal"
+        android:text="E D I T"
+        android:textSize="48sp"
+        android:fontFamily="casual"
+        android:textColor="@color/colorAccent" />
+    </LinearLayout>
+
     <com.example.aoge.skillexchange.CircleImageButton
         android:id="@+id/img_e_headportrait"
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:layout_centerInParent="true"
+        android:layout_gravity="center_horizontal"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
@@ -53,6 +74,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
+        android:layout_gravity="center_horizontal"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
@@ -116,7 +138,7 @@
 
     <EditText
         android:id="@+id/edt_e_can"
-        android:layout_width="267dp"
+        android:layout_width="match_parent"
         android:layout_height="34dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
@@ -157,7 +179,7 @@
 
     <EditText
         android:id="@+id/edt_e_want"
-        android:layout_width="267dp"
+        android:layout_width="match_parent"
         android:layout_height="34dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
@@ -181,7 +203,7 @@
 
     <Button
         android:id="@+id/btnconfirm"
-        android:layout_width="337dp"
+        android:layout_width="match_parent"
         android:layout_height="47dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
@@ -198,24 +220,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.944" />
 
-    <TextView
-        android:id="@+id/txt_e_welcome"
-        android:layout_width="wrap_content"
-        android:layout_height="80dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:text="E D I T"
-        android:textSize="48sp"
-        android:fontFamily="casual"
-        android:textColor="@color/colorAccent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.516"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.016" />
 
 
-</android.support.constraint.ConstraintLayout>
+
+</LinearLayout>
