--- a/app/src/main/res/layout/item_msg_show.xml
+++ b/app/src/main/res/layout/item_msg_show.xml
@@ -9,7 +9,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="left"
-        android:background="@drawable/message_left"  >
+        android:background="@drawable/message_right"  >
 
         <TextView
             android:id="@+id/left_msg"
